Fixed footer authors

--- a/_includes/structure/footer.html
+++ b/_includes/structure/footer.html
@@ -1,24 +1,27 @@
 <footer>
-	<div class="container">	
-		<a class="profile" href="https://twitter.com/femontanha">
+	<div class="container">
+		<a class="profile" href="https://twitter.com/femontanha" target="_blank">
 			<figure class="profile__image profile__image--femontanha"></figure>
 			<div class="profile__info">
-				<span class="profile__name">Fellipe Azambuja @femontanha</span>
+				<span class="profile__name">Fellipe Azambuja</span>
 				<span class="profile__role">Host & Front-end Developer</span>
+				<span class="profile__twitter">@femontanha</span>
 			</div>
 		</a>
-		<a class="profile" href="https://twitter.com/raymonsanches">
+		<a class="profile" href="https://twitter.com/raymonsanches" target="_blank">
 			<figure class="profile__image profile__image--raymon"></figure>
 			<div class="profile__info">
-				<span class="profile__name">Ramon Sanches @raymonsanches</span>
+				<span class="profile__name">Ramon Sanches</span>
 				<span class="profile__role">Co-Host & Senior PHP Developer</span>
+				<span class="profile__twitter">@raymonsanches</span>
 			</div>
 		</a>
-		<a class="profile" href="https://twitter.com/eduardojmatos">
+		<a class="profile" href="https://twitter.com/eduardojmatos" target="_blank">
 			<figure class="profile__image profile__image--edu"></figure>
 			<div class="profile__info">
-				<span class="profile__name">Eduardo Matos @eduardojmatos</span>
-				<span class="profile__role">FullStack Developer</span>		
+				<span class="profile__name">Eduardo Matos</span>
+				<span class="profile__role">FullStack Developer</span>
+				<span class="profile__twitter">@eduardojmatos</span>
 			</div>
 		</a>
 	</div>
