--- a/_scss/modules/_search.scss
+++ b/_scss/modules/_search.scss
@@ -2,12 +2,14 @@
   background-color: #fff;
   position: absolute;
   z-index: 9999;
-  box-shadow: 2px 6px 20px 0 #333;
+  box-shadow: 2px 6px 20px 0 rgba(0,0,0,.2);
+  border-radius: $base-radius;
   padding: 0;
-  margin: 0;
+  margin: 5px 0 0;
   width: 100%;
   left: 0;
   list-style: none;
+  overflow: hidden;
 
   .entry-date {
     font-size: 12px;
