--- a/_scss/modules/_episode.scss
+++ b/_scss/modules/_episode.scss
@@ -16,52 +16,51 @@
 }
 
 .episode-artwork {
-  display: none;
-  float: left;
-  margin-right: 10px;
-  width: 50px;
-  height: 50px;
+  margin-bottom: 10px;
+  width: 100%;
 
-  @media screen and (min-width: $mobile) {
-    display: block;
+  @media screen and (min-width: $tablet) {
+    float: left;
+    margin: 0 20px 0 0;
+    width: 100px;
+    height: 100px;
   }
 }
 
 .episode-link {
   display: block;
   text-decoration: none;
+
+  &:hover,
+  &:focus {
+    .episode-title {
+      text-decoration: underline;
+    }
+  }
 }
 
 .episode__number {
+  border-radius: $base-radius;
+  background: #eee;
+  color: #666;
+  display: inline-block;
+  font-size: 12px;
+  padding: 4px 6px;
   margin: 0 0 5px;
 }
 
 .episode-title {
   color: #29292C;
-  font-size: 20px;
-  margin: 0 0 10px;
+  font-size: 22px;
+  margin: 0 0 5px;
   font-family: $rubik-font;
   font-weight: 500;
 }
 
 .episode-description {
-  display: none;
+  color: #444;
   margin: 0;
-  height: 40px;
+  height: 41px;
   position: relative;
-
-  &::before {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 5px;
-    opacity: .6;
-    background-color: #FAFBFD;
-    content: "";
-  }
-
-  @media screen and (min-width: $mobile) {
-    display: block;
-  }
+  line-height: 1.4;
 }
