--- a/_scss/modules/_post-scraps.scss
+++ b/_scss/modules/_post-scraps.scss
@@ -1,11 +1,11 @@
 .post-scraps {
-    a {
-        color: #000;
-        font-weight: bold;
-        text-decoration: none;
+  a {
+    color: #263c4c;
+    font-weight: bold;
+    text-decoration: none;
 
-        &:hover {
-            text-decoration: underline;
-        }
+    &:hover {
+      text-decoration: underline;
     }
+  }
 }
