Minor fixes to the site

--- a/_includes/structure/footer.html
+++ b/_includes/structure/footer.html
@@ -1,13 +1,5 @@
 <footer>
 	<div class="container">
-		<a class="profile" href="https://twitter.com/femontanha" target="_blank">
-			<figure class="profile__image profile__image--femontanha"></figure>
-			<div class="profile__info">
-				<span class="profile__name">Fellipe Azambuja</span>
-				<span class="profile__role">Host & Front-end Developer</span>
-				<span class="profile__twitter">@femontanha</span>
-			</div>
-		</a>
 		<a class="profile" href="https://twitter.com/raymonsanches" target="_blank">
 			<figure class="profile__image profile__image--raymon"></figure>
 			<div class="profile__info">
@@ -20,7 +12,7 @@
 			<figure class="profile__image profile__image--edu"></figure>
 			<div class="profile__info">
 				<span class="profile__name">Eduardo Matos</span>
-				<span class="profile__role">FullStack Developer</span>
+				<span class="profile__role">CTO at GetNinjas</span>
 				<span class="profile__twitter">@eduardojmatos</span>
 			</div>
 		</a>
