add search by authors

--- a/_includes/modules/quick-access.html
+++ b/_includes/modules/quick-access.html
@@ -1,5 +1,5 @@
 <div id="search-form" class="search-form">
-  <input type="text" placeholder="Buscar episódio" id="search-input" class="input">
+  <input type="text" placeholder="Busque por episódio ou participante" id="search-input" class="input">
   <i class="fa fa-search" id="search-icon"></i>
   <ul class="search-results search-list"></ul>
 </div>
