fix: edu picture (#169)
Co-authored-by: Eduardo Matos <eduardoj.matos@gmail.com>

--- a/_scss/modules/structure/_footer.scss
+++ b/_scss/modules/structure/_footer.scss
@@ -53,7 +53,7 @@ footer {
   }
 
   &.profile__image--edu {
-    background-image: url('https://pbs.twimg.com/profile_images/1114382044577128448/OPjqGnQ8_400x400.jpg');
+    background-image: url('https://avatars0.githubusercontent.com/u/1279783?s=400&v=4');
   }
 
   &.profile__image--dne {
