Adding Will as co-host in site

--- a/_scss/modules/structure/_footer.scss
+++ b/_scss/modules/structure/_footer.scss
@@ -56,6 +56,10 @@ footer {
     background-image: url('https://avatars0.githubusercontent.com/u/1279783?s=400&v=4');
   }
 
+  &.profile__image--will {
+    background-image: url('https://avatars1.githubusercontent.com/u/853156?s=400&v=4');
+  }
+
   &.profile__image--dne {
     background-image: url('https://pbs.twimg.com/profile_images/984616273630941186/qKd10AiN_400x400.jpg');
   }
