--- a/_scss/modules/_partners.scss
+++ b/_scss/modules/_partners.scss
@@ -21,7 +21,7 @@
 
 .post-sponsors-text {
   a {
-    color: $primary-color;
+    color: $link-color;
     font-weight: bold;
     text-decoration: none;
 
