--- a/_scss/modules/blocks/_post-cast.scss
+++ b/_scss/modules/blocks/_post-cast.scss
@@ -49,7 +49,7 @@
 }
 
 .post-cast__content {
-  color: $link-color;
+  color: $text-color;
   font-weight: 400;
   line-height: 1.5;
 
@@ -59,7 +59,7 @@
   }
 
   p a {
-    color: $primary-color;
+    color: $link-color;
     font-weight: bold;
     text-decoration: none;
 
