--- a/_scss/pages/_structure.scss
+++ b/_scss/pages/_structure.scss
@@ -53,7 +53,7 @@ a {
 .page {
   max-width: 700px;
   margin: 0 auto;
-  color: $link-color;
+  color: $text-color;
   font-weight: 400;
   line-height: 1.5;
 }
