--- a/_includes/modules/supporter.html
+++ b/_includes/modules/supporter.html
@@ -2,7 +2,7 @@
   <h2>Doar/Apoio Financeiro</h2>
   <ul>
     <li>
-      Quer fazer uma doação recorrente? <a class="highlight" href="https://apoia.se/devnaestrada">https://apoia.se/devnaestrada</a>
+      Quer fazer uma doação recorrente? <a class="highlight" href="https://apoia.se/devnaestrada" target="_blank">https://apoia.se/devnaestrada</a>
     </li>
   </ul>
 </section>
